# SalvadorVolumeRenderer

./: .gitmodules  README.md  UMLDesign.zargo
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/jp/volumerenderer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  salvador-lib.cpp
app/src/main/java/jp/volumerenderer/: GLESSurface.java  MainActivity.java  RendererWrapper.java  SalvadorLib.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/salvador-lib/: GLES3Renderer.cpp  JNI.cpp  OpenGLSurface.cpp  OpenGLSurface.h  SalvadorMain.cpp  SalvadorMain.h  Scene.cpp  Scene.h
app/src/main/salvador-lib/Logger/: AndroidLogger.cpp  AndroidLogger.h  Logger.cpp  Logger.h  LoggerAPI.h
app/src/main/salvador-lib/Renderer/: GraphicsAPI.h  Renderer.cpp  Renderer.h
app/src/main/salvador-lib/Renderer/GLES3/: GLES3Renderer.cpp  GLES3Renderer.h
app/src/main/salvador-lib/Scene/: Object.cpp  Object.h  Scene.cpp  Scene.h
app/src/main/salvador-lib/Scene/Objects/: Camera.cpp  Camera.h  Object.cpp  Object.h  Volume.cpp  Volume.h
app/src/main/salvador-lib/math/: MathExtensions.h
app/src/test/java/jp/volumerenderer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
